--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,17 @@ services:
     image: nvr:local
     build:
       context: /home/steel-series/nvr
+      # dockerfile: ./Dockerfile   # only needed if your backend Dockerfile isn’t named Dockerfile
+    restart: unless-stopped
+    environment:
+      - TZ=${TZ:-UTC}
     volumes:
       - /home/steel-series/nvr/config:/config
       - /home/steel-series/nvr/storage:/recordings
-    networks: [nvrnet]
+    networks:
+      - nvrnet
     healthcheck:
-      test: ["CMD-SHELL","curl -fsS http://localhost:8000/health || exit 1"]
+      test: ["CMD-SHELL", "curl -fsS http://localhost:8000/health || exit 1"]
       interval: 15s
       timeout: 3s
       retries: 10
@@ -17,11 +22,20 @@ services:
     image: sytvision-frontend:local
     build:
       context: /home/steel-series/nvr/frontend
+      # dockerfile: ./Dockerfile   # only needed if named differently
+      # args:
+      #   VITE_API_BASE_URL: http://nvr:8000
     depends_on:
       nvr:
         condition: service_healthy
-    ports: ["8080:80"]
-    networks: [nvrnet]
+    ports:
+      - "8080:80"
+    restart: unless-stopped
+    environment:
+      - TZ=${TZ:-UTC}
+    networks:
+      - nvrnet
 
 networks:
-  nvrnet: { driver: bridge }
+  nvrnet:
+    driver: bridge
