--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,14 +2,12 @@ server {
   listen 80;
   server_name _;
 
-  # Serve the SPA
   root /usr/share/nginx/html;
   index index.html;
 
-  # (Optional) Proxy API calls to the backend service in the same Compose network
-  # Adjust the location + upstream to match your app (e.g. /api, /v1, etc.)
+  # Proxy API calls to backend on the compose network
   location /api/ {
-    proxy_pass http://nvr:8000/;   # backend service name + port from compose
+    proxy_pass http://nvr:8000/;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -18,7 +16,7 @@ server {
     proxy_set_header Connection "upgrade";
   }
 
-  # History API fallback (React Router / Vue Router)
+  # SPA history fallback
   location / {
     try_files $uri /index.html;
   }
