--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,12 @@ services:
     environment:
       - TZ=${TZ:-UTC}
     volumes:
-      - ./nvr/config:/config
-      - ./nvr/storage:/storage
-      - ./nvr/segments:/segments
-      - ./nvr/snapshots:/snapshots
-      - ./nvr/thumbnails:/thumbnails
-      - ./nvr/event_clips:/event_clips
+      - ./config:/config
+      - ./storage:/storage
+      - ./segments:/segments
+      - ./snapshots:/snapshots
+      - ./thumbnails:/thumbnails
+      - ./event_clips:/event_clips
     networks:
       - nvrnet
     healthcheck:
