--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ services:
   nvr:
     image: nvr:local
     build:
-      context: /home/steel-series/nvr
-      # dockerfile: ./Dockerfile   # only needed if your backend Dockerfile isn’t named Dockerfile
+      context: ./                # backend builds from repo root
+      # dockerfile: ./Dockerfile # uncomment if your Dockerfile isn't named "Dockerfile"
     restart: unless-stopped
     environment:
       - TZ=${TZ:-UTC}
@@ -25,8 +25,8 @@ services:
   frontend:
     image: sytvision-frontend:local
     build:
-      context: /home/steel-series/nvr/frontend
-      # dockerfile: ./Dockerfile   # only needed if named differently
+      context: ./frontend         # frontend builds from ./frontend
+      # dockerfile: ./Dockerfile  # uncomment if named differently
       # args:
       #   VITE_API_BASE_URL: http://nvr:8000
     depends_on:
